erDiagram
    %% Restaurant Management System - Entity Relationship Diagram
    %% This diagram can be rendered using Mermaid Live Editor or GitHub
    
    %% Authentication & User Management
    Account ||--o{ RefreshToken : "has"
    Account ||--o| Staff : "has"
    
    %% Menu Management
    Category ||--o{ MenuItem : "contains"
    
    %% Table & Reservation
    RestaurantTable ||--o{ Reservation : "has"
    RestaurantTable ||--o{ Order : "serves"
    RestaurantTable ||--o{ Bill : "generates"
    
    %% Reservation
    Reservation ||--o{ Order : "creates"
    
    %% Order Management
    Order ||--o{ OrderItem : "contains"
    Order ||--o{ KitchenOrder : "sends_to"
    Order ||--o| Bill : "generates"
    Staff ||--o{ Order : "takes"
    
    %% Order Items
    MenuItem ||--o{ OrderItem : "ordered_as"
    
    %% Kitchen
    Staff ||--o{ KitchenOrder : "prepares"
    
    %% Billing
    Bill ||--o{ BillItem : "contains"
    Bill ||--o{ Payment : "receives"
    MenuItem ||--o{ BillItem : "billed_as"
    Staff ||--o{ Bill : "processes"
    
    %% Core Tables
    Account {
        int accountId PK
        string username UK
        string email UK
        string phoneNumber UK
        string password
        boolean isActive
        datetime lastLogin
        datetime createdAt
        datetime updatedAt
    }
    
    RefreshToken {
        int tokenId PK
        int accountId FK
        string token UK
        datetime expiresAt
        string deviceInfo
        string ipAddress
        boolean isRevoked
        datetime createdAt
        datetime revokedAt
    }
    
    Staff {
        int staffId PK
        int accountId FK "UK"
        string fullName
        string address
        date dateOfBirth
        date hireDate
        decimal salary
        enum role
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }
    
    Category {
        int categoryId PK
        string categoryName UK
        string description
        int displayOrder
        boolean isActive
        string imageUrl
        datetime createdAt
        datetime updatedAt
    }
    
    MenuItem {
        int itemId PK
        string itemCode UK
        string itemName
        int categoryId FK
        decimal price
        decimal cost
        string description
        string imageUrl
        boolean isAvailable
        boolean isActive
        int preparationTime
        int spicyLevel
        boolean isVegetarian
        int calories
        int displayOrder
        datetime createdAt
        datetime updatedAt
    }
    
    RestaurantTable {
        int tableId PK
        string tableNumber UK
        string tableName
        int capacity
        int minCapacity
        int floor
        string section
        enum status
        string qrCode UK
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }
    
    Reservation {
        int reservationId PK
        string reservationCode UK
        string customerName
        string phoneNumber
        string email
        int tableId FK
        date reservationDate
        time reservationTime
        int duration
        int headCount
        string specialRequest
        decimal depositAmount
        enum status
        string notes
        datetime createdAt
        datetime updatedAt
    }
    
    Order {
        int orderId PK
        string orderNumber UK
        int tableId FK
        int staffId FK
        int reservationId FK
        string customerName
        string customerPhone
        int headCount
        enum status
        string notes
        datetime orderTime
        datetime confirmedAt
        datetime completedAt
        datetime createdAt
        datetime updatedAt
    }
    
    OrderItem {
        int orderItemId PK
        int orderId FK
        int itemId FK
        int quantity
        decimal unitPrice
        decimal subtotal
        string specialRequest
        enum status
        datetime createdAt
        datetime updatedAt
    }
    
    KitchenOrder {
        int kitchenOrderId PK
        int orderId FK
        int staffId FK
        int priority
        enum status
        datetime startedAt
        datetime completedAt
        int estimatedTime
        string notes
        datetime createdAt
        datetime updatedAt
    }
    
    Bill {
        int billId PK
        string billNumber UK
        int orderId FK "UK"
        int tableId FK
        int staffId FK
        decimal subtotal
        decimal taxAmount
        decimal taxRate
        decimal discountAmount
        decimal serviceCharge
        decimal totalAmount
        decimal paidAmount
        decimal changeAmount
        enum paymentStatus
        enum paymentMethod
        string notes
        datetime createdAt
        datetime paidAt
        datetime updatedAt
    }
    
    BillItem {
        int billItemId PK
        int billId FK
        int itemId FK
        string itemName
        int quantity
        decimal unitPrice
        decimal subtotal
        decimal discount
        decimal total
        datetime createdAt
    }
    
    Payment {
        int paymentId PK
        int billId FK
        enum paymentMethod
        decimal amount
        string transactionId
        string cardNumber
        string cardHolderName
        enum status
        string notes
        datetime paymentDate
        datetime createdAt
    }
